methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {var b:Boolean = false;
                           ^